--- a/processed/index.html
+++ b/processed/index.html
@@ -2,12 +2,20 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>raylu</title>
+	<title>discord - programming</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div id="content">
-		all time:
+		<h1>programming #general</h1>
+
+		<h2>by month:</h2>
+		<table id="months">
+			<th>month</th>
+			<th>messages</th>
+		</table>
+
+		<h2>all time:</h2>
 		<table id="all_time">
 			<th>user</th>
 			<th>messages</th>
