--- a/processed/index.html
+++ b/processed/index.html
@@ -13,13 +13,17 @@
 		<table id="months">
 			<th>month</th>
 			<th>messages</th>
+			<th></th>
 		</table>
 
 		<h2>all time:</h2>
 		<table id="all_time">
+			<th>rank</th>
 			<th>user</th>
 			<th>messages</th>
 			<th>percentage</th>
+			<th></th>
+			<th></th>
 		</table>
 	</div>
 
