all time graph has 100"%" width

--- a/processed/index.html
+++ b/processed/index.html
@@ -22,7 +22,7 @@
 			<th>user</th>
 			<th>messages</th>
 			<th>percentage</th>
-			<th></th>
+			<th><div class="bar filler" style="width: 500px"></div></th>
 			<th></th>
 		</table>
 	</div>
