all channel stats, n_attachments -> attachments

--- a/processed/index.html
+++ b/processed/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="content">
-		<h1>programming #general</h1>
+		<h1>discord - programming - all channels</h1>
 
 		<h2>by month:</h2>
 		<table id="months">
